# vacuum

./: .gitignore  AGENTS.md  Cargo.toml  README.md  operator.json
.beads/: issues.jsonl
.beads/.br_history/: issues.20260226_034632.jsonl  issues.20260226_035007.jsonl  issues.20260226_035926.jsonl  issues.20260331_153659.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: README.md
agent_ergonomics_audit/audit/: HANDOFF.md  ambition_bar_check.md  applied_changes.jsonl  intent_inference_corpus.jsonl  manifest.json  phase0_cli.json  phase0_skill_inventory.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
agent_ergonomics_audit/audit/regression_tests/: R-001__agent_discovery.test.sh  R-002__refusal_guidance.test.sh
docs/: PLAN.md
rules/: exit-code-range.yml  no-hashmap-in-output.yml  witness-must-append.yml
schema/: vacuum.v0.schema.json
scripts/: s3-to-vacuum  smoke.sh
src/: doctor.rs  guard.rs  lib.rs  main.rs
src/cli/: args.rs  exit.rs  mod.rs
src/output/: jsonl.rs
src/record/: builder.rs  mime.rs  mod.rs  path.rs
src/refusal/: codes.rs  mod.rs  payload.rs
src/walk/: filter.rs  walker.rs
src/witness/: ledger.rs  mod.rs  query.rs  record.rs
tests/: cli_smoke.rs  core_scanner.rs  coverage_parity.rs  describe.rs  doctor.rs  golden_idempotency.rs  golden_rules.rs  progress.rs  schema.rs  smoke_cli.rs  witness_append.rs  witness_query.rs
tests/fixtures/: README.md
tests/golden/: simple_baseline.json  simple_exclude_csv.json  simple_include_csv.json
tests/support/: mod.rs
(+22 files in other folders)
