[package]
name = "vacuum"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.60", features = ["derive"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
walkdir = "=2.5.0"
chrono = "=0.4.41"
globset = "=0.4.16"
blake3 = "=1.8.2"

[dev-dependencies]
tempfile = "=3.21.0"
spine-rules = { git = "https://github.com/cmdrvl/spine-rules" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
